// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <View
      style={
        Object {
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        }
      }
    >
      <Text
        style={
          Object {
            "fontWeight": "500",
          }
        }
      >
        Select which courses you would like to see on the Dashboard.
      </Text>
    </View>
    <list>
      <section>
        <View
          accessibilityTraits="header"
          style={
            Array [
              Object {
                "backgroundColor": "#F5F5F5",
                "flex": 1,
                "justifyContent": "center",
                "paddingLeft": 16,
                "paddingRight": 8,
                "paddingVertical": 4,
              },
              Object {
                "borderBottomColor": "#C7CDD1",
                "borderBottomWidth": 0.5,
              },
              Object {
                "borderTopColor": "#C7CDD1",
                "borderTopWidth": 0.5,
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "color": "#8B969E",
                    "fontSize": 14,
                    "fontWeight": "600",
                  },
                  undefined,
                ],
              ]
            }
          >
            Courses
          </Text>
        </View>
        <item>
          <View
            accessibilityRole="button"
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "borderBottomColor": "#C7CDD1",
                "borderBottomWidth": 1,
              }
            }
            testID="edit-favorites.course-favorite.1-favorited"
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "flexDirection": "row",
                  "paddingHorizontal": 16,
                  "paddingVertical": 16,
                }
              }
            >
              <Image
                source={
                  Object {
                    "uri": "starSolid",
                  }
                }
                style={
                  Array [
                    Object {
                      "height": 20,
                      "marginRight": 10,
                      "width": 20,
                    },
                    Object {
                      "tintColor": "#008EE2",
                    },
                  ]
                }
              />
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Object {
                      "fontWeight": "500",
                      "marginRight": 16,
                    },
                  ]
                }
              >
                Learn React Native
              </Text>
            </View>
          </View>
        </item>
        <item>
          <View
            accessibilityRole="button"
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "borderBottomColor": "#C7CDD1",
                "borderBottomWidth": 1,
              }
            }
            testID="edit-favorites.course-favorite.2-favorited"
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "flexDirection": "row",
                  "paddingHorizontal": 16,
                  "paddingVertical": 16,
                }
              }
            >
              <Image
                source={
                  Object {
                    "uri": "starSolid",
                  }
                }
                style={
                  Array [
                    Object {
                      "height": 20,
                      "marginRight": 10,
                      "width": 20,
                    },
                    Object {
                      "tintColor": "#008EE2",
                    },
                  ]
                }
              />
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Object {
                      "fontWeight": "500",
                      "marginRight": 16,
                    },
                  ]
                }
              >
                Learn React Native
              </Text>
            </View>
          </View>
        </item>
      </section>
    </list>
  </RCTSafeAreaView>
</RCTSafeAreaView>
`;

exports[`renders correctly as student 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <View
      style={
        Object {
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        }
      }
    >
      <Text
        style={
          Object {
            "fontWeight": "500",
          }
        }
      >
        Select which courses you would like to see on the Dashboard.
      </Text>
    </View>
    <list>
      <section>
        <View
          accessibilityTraits="header"
          style={
            Array [
              Object {
                "backgroundColor": "#F5F5F5",
                "flex": 1,
                "justifyContent": "center",
                "paddingLeft": 16,
                "paddingRight": 8,
                "paddingVertical": 4,
              },
              Object {
                "borderBottomColor": "#C7CDD1",
                "borderBottomWidth": 0.5,
              },
              Object {
                "borderTopColor": "#C7CDD1",
                "borderTopWidth": 0.5,
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "color": "#8B969E",
                    "fontSize": 14,
                    "fontWeight": "600",
                  },
                  undefined,
                ],
              ]
            }
          >
            Courses
          </Text>
        </View>
        <item>
          <View
            accessibilityRole="button"
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "borderBottomColor": "#C7CDD1",
                "borderBottomWidth": 1,
              }
            }
            testID="edit-favorites.course-favorite.1-favorited"
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "flexDirection": "row",
                  "paddingHorizontal": 16,
                  "paddingVertical": 16,
                }
              }
            >
              <Image
                source={
                  Object {
                    "uri": "starSolid",
                  }
                }
                style={
                  Array [
                    Object {
                      "height": 20,
                      "marginRight": 10,
                      "width": 20,
                    },
                    Object {
                      "tintColor": "#008EE2",
                    },
                  ]
                }
              />
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Object {
                      "fontWeight": "500",
                      "marginRight": 16,
                    },
                  ]
                }
              >
                Learn React Native
              </Text>
            </View>
          </View>
        </item>
        <item>
          <View
            accessibilityRole="button"
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "borderBottomColor": "#C7CDD1",
                "borderBottomWidth": 1,
              }
            }
            testID="edit-favorites.course-favorite.2-favorited"
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "flexDirection": "row",
                  "paddingHorizontal": 16,
                  "paddingVertical": 16,
                }
              }
            >
              <Image
                source={
                  Object {
                    "uri": "starSolid",
                  }
                }
                style={
                  Array [
                    Object {
                      "height": 20,
                      "marginRight": 10,
                      "width": 20,
                    },
                    Object {
                      "tintColor": "#008EE2",
                    },
                  ]
                }
              />
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Object {
                      "fontWeight": "500",
                      "marginRight": 16,
                    },
                  ]
                }
              >
                Learn React Native
              </Text>
            </View>
          </View>
        </item>
      </section>
      <section>
        <View
          accessibilityTraits="header"
          style={
            Array [
              Object {
                "backgroundColor": "#F5F5F5",
                "flex": 1,
                "justifyContent": "center",
                "paddingLeft": 16,
                "paddingRight": 8,
                "paddingVertical": 4,
              },
              Object {
                "borderBottomColor": "#C7CDD1",
                "borderBottomWidth": 0.5,
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "color": "#8B969E",
                    "fontSize": 14,
                    "fontWeight": "600",
                  },
                  undefined,
                ],
              ]
            }
          >
            Groups
          </Text>
        </View>
        <item>
          <View
            accessibilityRole="button"
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "borderBottomColor": "#C7CDD1",
                "borderBottomWidth": 1,
              }
            }
            testID="edit-favorites.course-favorite.1-favorited"
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "flexDirection": "row",
                  "paddingHorizontal": 16,
                  "paddingVertical": 16,
                }
              }
            >
              <Image
                source={
                  Object {
                    "uri": "starSolid",
                  }
                }
                style={
                  Array [
                    Object {
                      "height": 20,
                      "marginRight": 10,
                      "width": 20,
                    },
                    Object {
                      "tintColor": "#008EE2",
                    },
                  ]
                }
              />
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Object {
                      "fontWeight": "500",
                      "marginRight": 16,
                    },
                  ]
                }
              >
                Red Squadron
              </Text>
            </View>
          </View>
        </item>
        <item>
          <View
            accessibilityRole="button"
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "borderBottomColor": "#C7CDD1",
                "borderBottomWidth": 1,
              }
            }
            testID="edit-favorites.course-favorite.2-favorited"
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "flexDirection": "row",
                  "paddingHorizontal": 16,
                  "paddingVertical": 16,
                }
              }
            >
              <Image
                source={
                  Object {
                    "uri": "starSolid",
                  }
                }
                style={
                  Array [
                    Object {
                      "height": 20,
                      "marginRight": 10,
                      "width": 20,
                    },
                    Object {
                      "tintColor": "#008EE2",
                    },
                  ]
                }
              />
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Object {
                      "fontWeight": "500",
                      "marginRight": 16,
                    },
                  ]
                }
              >
                Red Squadron
              </Text>
            </View>
          </View>
        </item>
      </section>
    </list>
  </RCTSafeAreaView>
</RCTSafeAreaView>
`;

exports[`updates when courses prop changes 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <View
      style={
        Object {
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        }
      }
    >
      <Text
        style={
          Object {
            "fontWeight": "500",
          }
        }
      >
        Select which courses you would like to see on the Dashboard.
      </Text>
    </View>
    <list>
      <section>
        <View
          accessibilityTraits="header"
          style={
            Array [
              Object {
                "backgroundColor": "#F5F5F5",
                "flex": 1,
                "justifyContent": "center",
                "paddingLeft": 16,
                "paddingRight": 8,
                "paddingVertical": 4,
              },
              Object {
                "borderBottomColor": "#C7CDD1",
                "borderBottomWidth": 0.5,
              },
              Object {
                "borderTopColor": "#C7CDD1",
                "borderTopWidth": 0.5,
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "color": "#8B969E",
                    "fontSize": 14,
                    "fontWeight": "600",
                  },
                  undefined,
                ],
              ]
            }
          >
            Courses
          </Text>
        </View>
        <item>
          <View
            accessibilityRole="button"
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "borderBottomColor": "#C7CDD1",
                "borderBottomWidth": 1,
              }
            }
            testID="edit-favorites.course-favorite.1-favorited"
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "flexDirection": "row",
                  "paddingHorizontal": 16,
                  "paddingVertical": 16,
                }
              }
            >
              <Image
                source={
                  Object {
                    "uri": "starSolid",
                  }
                }
                style={
                  Array [
                    Object {
                      "height": 20,
                      "marginRight": 10,
                      "width": 20,
                    },
                    Object {
                      "tintColor": "#008EE2",
                    },
                  ]
                }
              />
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Object {
                      "fontWeight": "500",
                      "marginRight": 16,
                    },
                  ]
                }
              >
                Learn React Native
              </Text>
            </View>
          </View>
        </item>
      </section>
    </list>
  </RCTSafeAreaView>
</RCTSafeAreaView>
`;

exports[`updates when courses prop changes 2`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <View
      style={
        Object {
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        }
      }
    >
      <Text
        style={
          Object {
            "fontWeight": "500",
          }
        }
      >
        Select which courses you would like to see on the Dashboard.
      </Text>
    </View>
    <list>
      <section>
        <View
          accessibilityTraits="header"
          style={
            Array [
              Object {
                "backgroundColor": "#F5F5F5",
                "flex": 1,
                "justifyContent": "center",
                "paddingLeft": 16,
                "paddingRight": 8,
                "paddingVertical": 4,
              },
              Object {
                "borderBottomColor": "#C7CDD1",
                "borderBottomWidth": 0.5,
              },
              Object {
                "borderTopColor": "#C7CDD1",
                "borderTopWidth": 0.5,
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "color": "#8B969E",
                    "fontSize": 14,
                    "fontWeight": "600",
                  },
                  undefined,
                ],
              ]
            }
          >
            Courses
          </Text>
        </View>
        <item>
          <View
            accessibilityRole="button"
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "borderBottomColor": "#C7CDD1",
                "borderBottomWidth": 1,
              }
            }
            testID="edit-favorites.course-favorite.1-favorited"
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "flexDirection": "row",
                  "paddingHorizontal": 16,
                  "paddingVertical": 16,
                }
              }
            >
              <Image
                source={
                  Object {
                    "uri": "starSolid",
                  }
                }
                style={
                  Array [
                    Object {
                      "height": 20,
                      "marginRight": 10,
                      "width": 20,
                    },
                    Object {
                      "tintColor": "#008EE2",
                    },
                  ]
                }
              />
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 16,
                    },
                    Object {
                      "fontWeight": "500",
                      "marginRight": 16,
                    },
                  ]
                }
              >
                Learn React Native
              </Text>
            </View>
          </View>
        </item>
      </section>
    </list>
  </RCTSafeAreaView>
</RCTSafeAreaView>
`;
